# C_library

./: .gitignore
fmt/: CMakeLists.txt  build.sh
fmt/src/: test1.cpp  test2.cpp
spdlog/: CMakeLists.txt  README.md  build.sh
spdlog/logs/: async_log.txt  basic-log.txt  daily_2025-11-11.txt  rotating-log.txt  rotating.txt
spdlog/src/: example.cpp  main.cpp
yaml-cpp/: CMakeLists.txt  README.md  build.sh  run.sh
yaml-cpp/examples/: example1.yaml  example2.yaml
yaml-cpp/include/: yaml_utils.h
yaml-cpp/src/: main.cpp  yaml_utils.cpp
yaml-cpp/tests/: test_yaml.cpp
